Various small optimizations. Nothing fancy.